--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
     <html>
       <head>
-          <title>{{page.title}}</title> <!--What do these brackets do?-->
+          <title>{{page.title}}</title> 
+          <!--{{}} These are what Jekyll calls liquid tags, and these are used to inject content into the final web page-->
           <!-- link to main stylesheet -->
           <link rel="stylesheet" type="text/css" href="/css/main.css">
       </head>
