Added RSS Feed Link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
               <ul>
                   <li><a href="mailto:robertsak@gmail.com">email</a></li>
                   <li><a href="https://github.com/northern11">github.com/northern11</a></li>
+                  <li><a href="https://northern11.github.io/blog/atom.xml#">RSS Feed</a></li>
               </ul>
             </footer>
        </body>
